[tool.poetry]
name = "authentic-ai"
version = "0.1.0"
description = "A machine learning solution to determine whether an essay is A.I generated or student-written."
authors = ["Jinal.Shah <28205508+JinalShah2002@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.2.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
pyarrow = "^14.0.2"
SQLAlchemy = "^2.0.25"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
transformers = "^4.36.2"
torch = "^2.1.2"
exceptiongroup = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
